# sovereign-omega

./: .dockerignore  .env.example  .gitignore  .gitkeep  .replit  Dockerfile  HACKATHON.md  README.md  RENDER_DEPLOY.md  SECURITY.md  SKILL.md  SKILLS.md  docker-compose.yml  render.yaml  replit.md  requirements.txt
.agents/: agent_assets_metadata.toml
api/: main.py  schemas.py
attached_assets/: Pasted--Home-BUIDLs-Hackathons-PRIZE-POOL-50-000-PROS-EVENT-TI_1781738513995.txt  Pasted--Home-BUIDLs-Hackathons-PRIZE-POOL-50-000-PROS-EVENT-TI_1781794310719.txt  Pasted--Home-BUIDLs-Hackathons-PRIZE-POOL-50-000-PROS-EVENT-TI_1781795880075.txt  Pasted-You-re-right-to-pause-and-recheck-Let-me-do-a-full-audi_1781783798859.txt  Pasted-https-dorahacks-io-hackathon-pharos-phase1-buidl-Home-B_1781782460597.txt
core/: action_gate.py  coherence_engine.py  moat_accumulator.py  on_chain_heartbeat.py  silence_protocol.py
entropy/: Cargo.toml
entropy/src/: lib.rs
examples/: langchain_orchestrator.py  pharos_skill_composition.py  standalone_skill_usage.py
learning/: continuous_learner.py  domain_mastery.py  intelligence_score.py  iq_scorer.py
memory/: dual_strand.py  faiss_store.py  timescale_store.py
monitoring/: metrics.py
pharos/: chain_client.py
planes/: consensus.py  inferential.py  perceptual.py  self_reflection.py  world_model.py
reasoning/: chain_manager.py  embedding_engine.py  llm_interface.py
scripts/: bootstrap.sh  deploy_pharos.sh  onchain_test_runner.py  verify_deployment.py
sdk/: README.md  build.mjs  package-lock.json  package.json  tsconfig_fast.json
(+87 files in other folders)
