[package]
name = "sovereign_entropy"
version = "0.1.0"
edition = "2021"

[lib]
name = "sovereign_entropy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
